objects/Captcha_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Captcha Settings</description>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Key__c</fullName>
        <label>Site Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Captcha Settings</label>
</CustomObject>